<resources>
    <string name="app_name">MyFitnessApp</string>
    <string name="Register">Register</string>
    <string name="LogIn">LogIn</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="abs">Abs</string>
    <string name="exercises">Exercises</string>
    <string name="legs">LEGS</string>
    <string name="arms">ARMS</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>